<resources>
    <string name="app_name">Test Task</string>
    <string name="attack">Attack</string>
    <string name="battle">Battle</string>
    <string name="gamer_n_monsters">Gamer And Monsters</string>
    <string name="heal">Heal</string>
    <string name="start_game">Start Game</string>
    <string name="quit">Quit</string>
    <string name="game_over">Game Over</string>
    <string name="new_game">New Game</string>
    <string name="lost_message">You lost. Want to play again?</string>
    <string name="game_win">Victory!</string>
    <string name="win_message">You\'ve defeated all the monsters! Want to play again?</string>
    <string name="player">Gamer</string>
    <string name="health">Health</string>
    <string name="defense">Defense</string>
    <string name="damage">Damage</string>
    <string name="heals_count">Heals</string>
    <string name="monster">Monster</string>
    <string name="monsters_defeated">Every monsters are defeated!</string>
    <string name="load_game">Load Game</string>
</resources>