<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".fragments.GameFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.7"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/battle"
            android:textAppearance="@style/TextAppearance.Material3.DisplayMedium.Emphasized"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/playerStatsTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="?colorOutlineVariant"
            android:gravity="center"
            android:padding="@dimen/common_spacing"
            android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
            app:layout_constraintEnd_toStartOf="@id/offset"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/label" />

        <Space
            android:id="@+id/offset"
            android:layout_width="16dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@id/label"
            app:layout_constraintEnd_toStartOf="@id/monsterStatsTextView"
            app:layout_constraintStart_toEndOf="@id/playerStatsTextView"
            app:layout_constraintTop_toBottomOf="parent" />

        <TextView
            android:id="@+id/monsterStatsTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="?colorOutlineVariant"
            android:gravity="center_horizontal"
            android:padding="@dimen/common_spacing"
            android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toEndOf="@id/offset"
            app:layout_constraintTop_toBottomOf="@id/label" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginVertical="16dp"
        android:layout_weight="2">

        <TextView
            android:id="@+id/logTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?colorOutlineVariant"
            android:padding="8dp"
            android:textAppearance="@style/TextAppearance.Material3.BodyMedium" />

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/attackButton"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/attack" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/healButton"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/heal" />

    </LinearLayout>

</LinearLayout>